# Lagosana

./: ## SMART+ER 프롬프트 PostGenius_백업.txt  .env  .gitignore  BlogBot.html  BlogBot2.html  BlogBot3.html  LagoSana AI Solution Ep.1 뷰티 비즈니스 블로그 & SNS 마케팅 교육.txt  Python_로그기록_20250205.txt  README.md  chatTest.html  config.ini  lagosana.pem  lagosana_sns_bot.html  main.py  obsidian test  블로그 템플릿.txt
backend/: README.md  blog_chat.py  main.py  pyproject.toml
backend/core/: .env  config.py  database.py  db.py  logging.py
backend/model/: chat_model.py
backend/routes/: chat_hist_routes.py  chat_routes.py
backend/util/: db_func.py  standard_response.py
certs/: ai.lagosana.com-chain.pem  ai.lagosana.com-crt.pem  ai.lagosana.com-key.pem
css/: lagosana.css
docs/: Lagossana Marketing Solution Prompt.txt  test  문체.txt
docs/00_info/: git hub token.txt
docs/01_SNS_posting_bot/: prompt_v02
docs/01_assistants/01_SNS_Marketer/: prompt_v001.txt
docs/01_assistants/01_SNS_posting_bot/: prompt_v01.txt  prompt_v02.txt  prompt_v03.txt
docs/01_assistants/02_SNS_posting_for_review_bot/: prompt_v00.txt  prompt_v01.txt  prompt_v02.txt  prompt_v03.txt  prompt_v04.txt  문체.txt
docs/01_assistants/03_QnA/: prompt_v01.txt
docs/01_assistants/04_Event_Planner/: lagosana_RANAR_knowledge.txt  prompt_v00.txt
docs/01_assistants/06_Daily SNS/: prompt_v03.txt
web/: .htaccess  chat_with_menu.php  chatbot_menu.php  chatbot_menu2.php  get_lagosana_auth1.html  get_lagosana_auth2.html  lagosana_sns_bot.html  lagosana_sns_bot.php  lagosana_sns_bot_bak.php  lagosana_sns_bot_v2.php  lagosana_sns_statistics.php
web/css/: chat_with_menu.css  chatbot_menu.css  chatbot_menu.html  lagosana.css
web/data/: get_chat_with_menu.php
web/data/ajax/: get_ajax.php
web_platform66/: ai_send.html
