[project]
name = "lagosana"
version = "0.1.0"
description = ""
authors = [
    {name = "chan",email = "truemindy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.63.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=44.0.1,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
