[project]
name = "lagosana-backend"
version = "0.1.0"
description = "Lagosana Chat API Backend"
authors = [
    {name = "chan",email = "truemindy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai (>=1.12.0,<2.0.0)",
    "fastapi (>=0.109.0,<0.110.0)",
    "uvicorn (>=0.27.0,<0.28.0)",
    "sqlalchemy (>=2.0.25,<3.0.0)",
    "pydantic (>=2.6.1,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "aiohttp (>=3.9.3,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "prometheus-client (>=0.19.0,<0.20.0)",
    "python-json-logger (>=2.0.7,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
